<resources>
    <string name="app_name">Roommates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_label">Accedi a Roommates, l\'app per i coinquilini</string>
    <string name="login_email_field">Email</string>
    <string name="login_pass_field">Password</string>
    <string name="login_forgotpass_label">Password dimenticata?</string>
    <string name="login_login_btn">Accedi</string>
    <string name="login_register_btn">Registrati</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_register_label">Registrati a Roommates, l\'app per i coinquilini</string>
    <string name="registration_confirm_pass_label">Conferma password</string>
    <string name="logo_description">A purple house</string>
    <string name="no_house">Non appartieni ad una casa!</string>
    <string name="no_house_join_label">Conosci il codice di una casa già esistente?</string>
    <string name="no_house_join_field">Codice casa</string>
    <string name="no_house_join_btn">Unisciti</string>
    <string name="no_house_create_label">Crea una nuova casa!</string>
    <string name="no_house_create_field">Nome casa</string>
    <string name="no_house_create_btn">Crea</string>
    <string name="house_created_label">Congratulazioni, hai creato una nuova casa! Condividi ora il codice con i tuoi coinquilini.</string>
    <string name="house_created_name">Nome casa:</string>
    <string name="house_created_code">Codice casa:</string>
    <string name="home_btn">Home</string>
    <string name="forgot_password_to_login">Torna a login</string>
    <string name="forgot_password_reset">Reset password</string>
    <string name="email_not_valid">Email non valida</string>
    <string name="forgot_password_sent">Email di recupero inviata</string>
    <string name="name_field">Nome</string>
    <string name="error_join_house">Codice casa errato!</string>
    <string name="share_code_text">Unisciti alla mia casa su Roomates!\\nCodice: {code}\\nLink: {link}</string>
    <string name="share_code_title">Condividi il codice</string>
    <string name="turni">Turni di pulizia</string>
    <string name="home">Home</string>
    <string name="Calendario">Calendario</string>
    <string name="listaSpesa">Lista della spesa</string>
    <string name="gestioneSpese">Gestione spese</string>
    <string name="rubrica">Rubrica</string>
    <string name="note">Note</string>
    <string name="sondaggi">Sondaggi</string>
    <string name="add_symbol">+</string>
    <string name="share_note_title">Condividi una nota</string>
    <string name="delete_note_title">Conferma eliminazione</string>
    <string name="delete_note_message">Vuoi eliminare la nota?</string>
    <string name="note_new_hint">Nuova nota...</string>
    <string name="new_note_btn">Salva nota</string>
    <string name="shopping_list_hint">Aggiungi...</string>
    <string name="shopping_list_add">ACQUISTA</string>
    <string name="buy_name_hint">Nome spesa...</string>
    <string name="division_between">Da dividere tra:</string>
    <string name="buy_amount_hint">€...</string>
    <string name="summary_products">Riepilogo prodotti:</string>
    <string name="note_new_contact_name">Nome...</string>
    <string name="note_new_contact_number">0555 1234 12</string>
    <string name="drawer_open">Apri menu</string>
    <string name="drawer_close">Chiudi menu</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="delete_shopitem_message">Vuoi eliminare l\'elemento dalla lista?</string>
    <string name="delete_contact_message">Vuoi eliminare il contatto?</string>
    <string name="share_survey">Vota nel sondaggio!</string>
    <string name="share_survey_title">Condividi un sondaggio</string>
    <string name="delete_survey_message">Eliminare il sondaggio?</string>
    <string name="no_options">Inserisci delle opzioni!</string>
    <string name="no_text_survey">Inserisci la domanda!</string>
    <string name="create_survey_btn">Crea sondaggio</string>
    <string name="add">+</string>
    <string name="survey_domanda">Domanda</string>
    <string name="multiple_choiice">Scelta multipla</string>
    <string name="options">Opzioni</string>
    <string name="question_placeholder">Domanda del sondaggio</string>
    <string name="error_placeholder">[ERROR]</string>
    <string name="this_week">Questa settimana</string>
    <string name="next_week">Prossima settimana</string>
    <string name="prompt_spinner_new_turno">Aggiungi gli utenti in ordine</string>
    <string name="share_turno_title">Condividi un turno di pulizia</string>
    <string name="failed_registration">Registrazione fallita.</string>
    <string name="error_empty_house_id">Inserisci un codice valido.</string>
    <string name="error_create_house">Errore nella creazione della casa. Riprova.</string>
    <string name="complete">Completa</string>
    <string name="completed">Completato</string>
    <string name="to_complete">Da completare</string>
    <string name="contact_notext">Inserisci tutti i campi</string>
    <string name="duties_order">Inserisci utenti che devono pulire, nell\'ordine desiderato</string>
    <string name="situazioneText">Situazione</string>
    <string name="storicoSituazioneText">Storico</string>
    <string name="segna_pagato">Segna come pagato</string>
    <string name="name_new_spesa_comune">Nome spesa...</string>
    <string name="euro">€...</string>
    <string name="responsabile">Responsabile pagamento:</string>
    <string name="ripetizioneSpesaComune">Si ripete:</string>
    <string name="mensile">Mensile</string>
    <string name="settimanale">Settimanale</string>
    <string name="name">name</string>
    <string name="houseId">houseId</string>
    <string name="amount">amount</string>
    <string name="repeating">repeating</string>
    <string name="payer">payer</string>
    <string name="mai">Mai</string>
    <string name="empty_fields">Email o password vuoti!</string>
    <string name="no_duties">Nessun turno</string>
    <string name="your_duties">I tuoi turni questi settimana</string>
    <string name="no_events">Nessun evento oggi</string>
    <string name="events_today">Eventi di oggi</string>
    <string name="no_notes">Nessuna nota presente, aggiungine una!</string>
    <string name="no_contacts">Nessun contatto presente, aggiungine uno!</string>
    <string name="no_surveys">Nessun sondaggio presente, aggiungine uno!</string>
    <string name="idFrom">idFrom</string>
    <string name="idTo">idTo</string>
    <string name="situazione_spese">Situazione spese</string>
    <string name="storico_spese">Storico spese</string>
    <string name="spese_comuni">Spese comuni</string>
    <string name="passwords_do_not_match">Le password non corrispondono</string>
    <string name="password_does_not_meet_requirements">La password non soddisfa i requisiti.</string>
    <string name="registrazione_fallita_errore_del_db">Registrazione fallita (errore del db).</string>
    <string name="authentication_failed">Autenticazione fallita.</string>
    <string name="forgot_password_not_sent">Invio email di recupero fallito</string>
    <string name="email_does_not_meet_requirements">L\'email non soddisfa i requisiti.</string>
    <string name="spesa_gia_pagata">"Spesa già pagata "</string>
    <string name="questo_mese">questo mese</string>
    <string name="da_pagare_entro">"Da pagare entro "</string>
    <string name="questa_settimana">questa settimana</string>
    <string name="pagamento">Pagamento</string>
    <string name="conferma_pagamento">Confermi il pagamento?</string>
    <string name="cancella">Cancella</string>
    <string name="ok">Ok</string>
    <string name="spese">Spese</string>
    <string name="inserire_dati">Inserire i dati</string>
    <string name="pagato_da">"Pagato da "</string>
    <string name="euro2">€</string>
    <string name="amount2">"Amount: "</string>
    <string name="enter_valid_number">Inserisci un numero valido</string>
    <string name="da_pagare">Da pagare</string>
</resources>